[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2018"
name = "pgteal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "main"

[[bin]]
name = "flamegraph"

[features]
lua51 = ["tealr/mlua_lua51"]
lua52 = ["tealr/mlua_lua52"]
lua53 = ["tealr/mlua_lua53"]
lua54 = ["tealr/mlua_lua54"]
vendored = ["tealr/mlua_vendored"]

[dependencies]
either = "1.9.0"
futures = "0.3.28"
mlua = "0.8"
parking_lot = "0.12.1"
serde = {version = "1.0.183"}
serde_json = "1.0.105"
shared = {path = "../shared"}
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "tls", "uuid", "json"], default-features = false}
tealr = {version = "0.9.0-alpha4", git = "https://github.com/lenscas/tealr", features = ["derive", "mlua", "mlua_serialize", "mlua_module"], default-features = false}
tokio = {version = "*", features = ["rt"]}
triple_buffer = "6.2.0"
uuid = "1.4"
