[package]
authors = ["lenscas <lenscas@gmail.com>"]
edition = "2021"
name = "pgteal_cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
lua51 = ["tealr/mlua_lua51"]
lua52 = ["tealr/mlua_lua52"]
lua53 = ["tealr/mlua_lua53"]
lua54 = ["tealr/mlua_lua54"]

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.75"
clap = "4.4.4"
glob = "0.3.0"
serde = {version = "1", features = ["derive"]}
shared = {path = "../shared"}
sqlx = {version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "tls"], default-features = false}
tealr = {version = "0.9.0-alpha4", git = "https://github.com/lenscas/tealr", features = ["derive", "mlua", "mlua_vendored", "mlua_serialize"], default-features = false}
tokio = {version = "*", features = ["rt", "macros"]}
toml = "0.7.8"
