[package]
edition = "2018"
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0.116"
sqlx = { version = "0.7.3", features = ["uuid", "json"] }
tealr = { version = "0.9.0-alpha4", git = "https://github.com/lenscas/tealr", features = [
    "mlua",
    "mlua_serialize",
], default-features = false }
uuid = "1.7"
