[package]
edition = "2018"
name = "shared"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
sqlx = { version = "0.8.2", features = ["uuid", "json"] }
serde = "1.0.204"
tealr = { version = "0.10.0", git = "https://github.com/lenscas/tealr", features = [
    "mlua",
    "mlua_serialize",
], default-features = false }
uuid = "1.9"
